--- a/.github/workflows/cpplint.yml
+++ b/.github/workflows/cpplint.yml
@@ -10,4 +10,4 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     - run: pip install cpplint
-    - run: cpplint --exclude="/../../gtest/*" --recursive .
+    - run: cpplint --exclude="gtest/*" --recursive .
