--- a/.github/workflows/cpplint_modified_files.yml
+++ b/.github/workflows/cpplint_modified_files.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
     - run: pip install cpplint
-    - run: cpplint --exclude="/../../gtest/*" --recursive .
+    - run: cpplint --exclude="gtest/*" --recursive .
